Fixed select element's padding issue on safari

--- a/src/Pages/Styles/Home/Home.css
+++ b/src/Pages/Styles/Home/Home.css
@@ -39,6 +39,7 @@
   outline: none;
   border-radius: 5px;
   padding: 0.75rem 1rem 0.75rem 0.75rem;
+  text-indent: 0.75rem 1rem 0.75rem 0.75rem;
 }
 #home #home-container #filter #search-container {
   position: relative;
